service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nimbusguard
spec:
  selector:
    app: nimbusguard
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
